--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@ $link-hover-color: darken($link-color, 15%); //green
 .nav-link {
   margin-bottom: 0;
   border-top: solid 3px #aaa;
+  font-size: 1.3rem;
 
   &.active {
     border-top: solid 3px $link-color;
@@ -29,7 +30,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: darken($body-bg, 15%);
+  background-color: darken($body-bg, 25%);
   padding: 5px 10px;
   color: #ddd;
   text-align: right;
