--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,7 +56,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #ccc; }
+  background-color: #eee; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -7044,12 +7044,15 @@ a.text-dark:hover, a.text-dark:focus {
 
 .carousel.slide {
   max-width: 1000px; }
+  @media screen and (min-width: 1000px) {
+    .carousel.slide img {
+      border-radius: 30px; } }
 
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #8c8c8c;
+  background-color: #484848;
   padding: 5px 10px;
   color: #ddd;
   text-align: right; }
